# notmuch-mailmover

./: .gitignore  .goreleaser.yml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  build.rs  cliff.toml  config.yaml  flake.nix  renovate.json  renovate.json5  shell.nix  stylua.toml
.ci/: build.sh  install-deps.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  test.yml  update-flake-lock.yml
example/: config.lua  config.yaml  config_filter_with_prefix.yaml  config_first.yaml  config_multiple_accounts.lua
share/: _notmuch-mailmover  _notmuch-mailmover.ps1  notmuch-mailmover.1  notmuch-mailmover.bash  notmuch-mailmover.elv  notmuch-mailmover.fish
src/: action.rs  cli.rs  config.rs  engine.rs  main.rs  repo.rs
src/lib/: action.rs  cli.rs  config.rs  engine.rs  mod.rs  repo.rs
