[package]
name = "notmuch-mailmover"
version = "0.2.0"
authors = ["Michael Adler <therisen06@gmail.com>"]
description = "Move notmuch tagged mails into Maildir folders"
homepage = "https://github.com/michaeladler/notmuch-mailmover"
license = "Apache-2.0"
edition = "2021"

[dependencies]
uuid = { version = "1.8.0", features = ["v4"] }
anyhow = "1.0.80"
env_logger = "0.11.1"
log = "0.4.21"
notmuch = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
directories = "5.0.1"
shellexpand = "3.0.0"
clap = { version = "4.5.4", features = [ "derive", "cargo" ] }

[dev-dependencies]
regex = "1.10.3"

[build-dependencies]
clap = { version = "4.5.4", features = [ "derive", "cargo" ] }
clap_complete = "4.5.1"
clap_mangen = "0.2.20"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
