[package]
name = "notmuch-mailmover"
version = "0.6.0"
authors = ["Michael Adler <therisen06@gmail.com>"]
description = "Move notmuch tagged mails into Maildir folders"
homepage = "https://github.com/michaeladler/notmuch-mailmover"
license = "Apache-2.0"
edition = "2021"

[lib]
name = "nm_mailmover"
path = "src/lib/mod.rs"

[[bin]]
name = "notmuch-mailmover"
path = "src/main.rs"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
uuid = { version = "1.15.1", features = ["v4"] }
anyhow = "1.0.97"
env_logger = "0.11.5"
log = "0.4.27"
notmuch = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
directories = "6.0.0"
shellexpand = "3.0.0"
clap = { version = "4.5.18", features = [ "derive", "cargo" ] }
git-version = "0.3.9"
konst = "0.3"
mlua = { version = "0.10.3", features = ["lua54", "serialize", "send"] }

[build-dependencies]
clap = { version = "4.5.18", features = [ "derive", "cargo" ] }
clap_complete = "4.5.46"
clap_mangen = "0.2.26"
git-version = "0.3.9"
flate2 = "1.0.17"
konst = "0.3"

[dev-dependencies]
regex = "1.11.1"

[features]
vendored = ["mlua/vendored"]
